--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "lint": "eslint *.js src/**/*.js",
     "format": "prettier --ignore-path ./.gitignore --write \"./**/*.{html,json,js,ts,css}\"",
     "test": "jest"
-    
   },
   "author": "Shane Thompson",
   "license": "ISC",
   "devDependencies": {
+    "dotenv": "^16.3.1",
     "eslint": "^8.26.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
