--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "outside",
+  "name": "cinescope",
   "version": "3.0.0",
-  "description": "Boilerplate for WDD 330 SleepOutside project",
+  "description": "Cinescope Project WDD330 - Team 3",
   "main": "main.js",
   "scripts": {
     "start": "vite",
@@ -11,7 +11,7 @@
     "format": "prettier --ignore-path ./.gitignore --write \"./**/*.{html,json,js,ts,css}\"",
     "test": "jest"
   },
-  "author": "Shane Thompson",
+  "author": "Jorge A Chavez & Kevin T. Tapia",
   "license": "ISC",
   "devDependencies": {
     "dotenv": "^16.3.1",
